infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: auth-deployment 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth   
    spec:
      containers: 
        - name: auth
          image: bilal157/auth:latest

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
