infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: bilal157/client:latest
---
apiVersion: v1  
kind: Service
metadata:
  name: client-service  
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
