infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: order-deployment 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers: 
        - name: order
          image: bilal157/order:latest

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
