infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: ticket-deployment 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers: 
        - name: ticket
          image: bilal157/ticket:latest

---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
