infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ticket-mongo-deployment
spec:
  replicas: 1   
  selector:
    matchLabels:
      app: ticket-mongo
  template:
    metadata:
      labels:
        app: ticket-mongo
    spec:
      containers:
        - name: ticket-mongo
          image: mongo

---
apiVersion: v1
kind: Service 
metadata:
  name: ticket-mongo-service
spec:
  selector: 
    app: ticket-mongo
  ports:
    - protocol: TCP 
      port: 27017
      targetPort: 27017
